# fs-in-a-box

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/libfsbox/: BlockAllocator.cpp  BlockAllocator.h  BlockReader.cpp  BlockReader.hpp  BlockTypes.h  CMakeLists.txt  Container.cpp  Container.h  ContainerIntf.cpp  ContainerIntf.h  DirIntf.cpp  DirIntf.h  FileIntf.cpp  FileIntf.h  FsUtils.cpp  FsUtils.h  Logging.cpp  Logging.h  MMF.cpp  MMF.h  Stub.cpp  Stub.h  Types.h
src/mscom/: BSTRUtils.cpp  BSTRUtils.h  CMakeLists.txt  Directory.cpp  Directory.h  FS.h  FS.idl  FS_i.c  File.cpp  File.h  Fs.h  FsClassFactory.cpp  FsClassFactory.h  FsComponent.cpp  FsComponent.h  InprocSrv.cpp  InprocSrv.h  dllmain.cpp  fsboxmscom.def
src/xpcom/: CMakeLists.txt
test/: BlockAllocatorTest.cpp  BlockReaderTest.cpp  CMakeLists.txt  ContainerIntfTest.cpp  ContainerTest.cpp  DirIntfTest.cpp  FileIntfTest.cpp  MMFTest.cpp  TestUtils.cpp  TestUtils.h  main.cpp
